--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,12 @@
         android:layout_marginTop="10dp"
         android:text="high"
         android:textSize="20sp" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textV"
+        android:text="blah"/>
+
 
 
 
